# cJSON-bazel

./: BUILD  MODULE.bazel
